k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: dev
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: asadoblivion/saista-user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
