k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: dev
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
